--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "antd-mobile": "^5.37.1",
+    "aos": "^2.3.4",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
     "localforage": "^1.10.0",
