--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "antd-mobile": "^5.37.1",
     "aos": "^2.3.4",
+    "jslib-html5-camera-photo": "^3.3.4",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-html5-camera-photo": "^1.5.11",
     "react-router-dom": "^6.26.2",
     "sort-by": "^1.2.0"
   },
